.provarCaches/00D5f000005vwGkEAI/objects/rstk__rtwctr__c.object
<CustomObject>
    <customHelpPage>rstk__objecthelp_rtwctr</customHelpPage>
    <description>rtwctr__c: Holds information about a specific Work Center. A Work Center is a component of a Department within a Division. Information critical for accurate scheduling of production is specified at the Work Center level (e.g. daily capacity - for both Labor Hours and Machine hours, queue days at the Work Center).</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__rtwctr_div__r.rstk__sydiv_div__c &amp; &apos;_&apos; &amp;  rstk__rtwctr_wctr__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__rtwctr_wctr__c &amp; &apos; &apos; &amp; &apos;(&apos; &amp;  rstk__rtwctr_descr__c &amp; &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_concurseqopt__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, indicates that this Work Center can be a candidate for a concurrent operation.</inlineHelpText>
        <label>Work Center Concurrent Sequence Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_dept__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Mfg Department to which this Work Center belongs. This link provides various defaults for overhead rates, inventory site, responsible individuals and Accounting Dimension value.</inlineHelpText>
        <label>Mfg Department</label>
        <referenceTo>rstk__rtdept__c</referenceTo>
        <relationshipLabel>Work Centers</relationshipLabel>
        <relationshipName>RTWCTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_descr__c</fullName>
        <inlineHelpText>This is a detailed description of the Work Center.  User-defined, up to 50 characters.</inlineHelpText>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_dfltreserveind__c</fullName>
        <inlineHelpText>The Work Center Reserve Capacity indicator is for indicating if the Work Center is reserved for &apos;anchored&apos; work order operations. If it is set, valid values are Machine or Labor, indicating which labor type is reserved.</inlineHelpText>
        <label>Work Center Reserve Capacity Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Reserved</fullName>
                </value>
                <value>
                    <fullName>Machine Hours</fullName>
                </value>
                <value>
                    <fullName>Labor Hours</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Division.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divrtwctrs</relationshipLabel>
        <relationshipName>divrtwctrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_hrsperdaylab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the maximum capacity of labor hours available in this Work Center per day. It is the length of production day hours times the number of operators assigned to the work center.</inlineHelpText>
        <label>Total Capacity Labor Hrs/Day</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_hrsperdaymach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the maximum capacity of machine hours available in this Work Center per day. It is the length of production day hours times the number of machines in the work center.</inlineHelpText>
        <label>Total Capacity Machine Hrs/Day</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_isslocid__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Inventory location used for items that are backflushed (auto-issued) when completions are reported at this work center.</inlineHelpText>
        <label>Issue Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Work Centers</relationshipLabel>
        <relationshipName>rtwctrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_labhrsdaysconv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The maximum labor hours available for consumption in a calendar day at this Work Center by one person. Total Capacity Labor Hrs/ Day is the maximum labor hours available in this Work Center per day times number of operators to be scheduled.</inlineHelpText>
        <label>Length of Production Day - Labor Hrs</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_machhrsdaysconv__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Maximum machine hrs that a single operation can consume in this Work Center per day. Total Capacity Machine Hrs/ Day is the maximum number machine hrs available in this Work Center per day, times the number of machines to be scheduled.</inlineHelpText>
        <label>Length of Production Day - Machine Hrs</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_queuedays__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the average number of days that a work order is in queue for this work center, if any.  For scheduling, it is inserted prior to the operation beginning in this work center.  May be used for drying or curing time, for example.</inlineHelpText>
        <label>Queue Days</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_resp__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>This is the planner responsible for this Work Center.</inlineHelpText>
        <label>Responsible Planner</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Work Centers</relationshipLabel>
        <relationshipName>RTWCTRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_schedfactor__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>The scheduling factor is a multiplier applied to the sum of labor and machine times for a work center to allow for flexibility in scheduling. For costing purposes and efficiency is  advisable to set scheduling factor to a value greater than 1</inlineHelpText>
        <label>Scheduling Factor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_seqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>The Sequence Number for  Work Centers determines the order the work centers appear in the Work Center Capacity Planning Workbench.</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__rtwctr_wctr__c</fullName>
        <inlineHelpText>This is the Work Center number defined by the user.  It is a text field, up to 10 characters.</inlineHelpText>
        <label>Work Center Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Trigger Options</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Manufacturing Work Center</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Mfg_Work_Centers</fullName>
        <columns>NAME</columns>
        <columns>rstk__rtwctr_div__c</columns>
        <columns>rstk__rtwctr_wctr__c</columns>
        <columns>rstk__rtwctr_descr__c</columns>
        <columns>rstk__rtwctr_dept__c</columns>
        <columns>rstk__rtwctr_resp__c</columns>
        <columns>rstk__rtwctr_queuedays__c</columns>
        <columns>rstk__rtwctr_schedfactor__c</columns>
        <columns>rstk__rtwctr_labhrsdaysconv__c</columns>
        <columns>rstk__rtwctr_seqno__c</columns>
        <columns>rstk__rtwctr_machhrsdaysconv__c</columns>
        <columns>rstk__rtwctr_hrsperdaylab__c</columns>
        <columns>rstk__rtwctr_hrsperdaymach__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Mfg Work Centers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manufacturing Work Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__CapacityDay_Labor_Range</fullName>
        <active>true</active>
        <description>Capacity/Day, Labor Range</description>
        <errorConditionFormula>rstk__rtwctr_labhrsdaysconv__c &lt; 0 || rstk__rtwctr_labhrsdaysconv__c &gt; 24</errorConditionFormula>
        <errorMessage>Length of Production Day - Labor Hrs must be between 0 and 24</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__CapacityDay_Labor_nor_HrsDay_Labor</fullName>
        <active>true</active>
        <description>Neither &apos;Length of Production Day - Labor Hrs&apos; nor &apos;Total Capacity Labor Hrs/Day&apos; can be zero unless both are zero</description>
        <errorConditionFormula>(rstk__rtwctr_hrsperdaylab__c = 0 &amp;&amp; rstk__rtwctr_labhrsdaysconv__c != 0) || (rstk__rtwctr_hrsperdaylab__c != 0 &amp;&amp; rstk__rtwctr_labhrsdaysconv__c = 0)</errorConditionFormula>
        <errorMessage>Neither &apos;Length of Production Day - Labor Hrs&apos; nor &apos;Total Capacity Labor Hrs/Day&apos; can be zero unless both are zero</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__CapacityDay_Machine_Range</fullName>
        <active>true</active>
        <description>Capacity/Day, Machine Range</description>
        <errorConditionFormula>rstk__rtwctr_machhrsdaysconv__c &lt; 0 || rstk__rtwctr_machhrsdaysconv__c &gt; 24</errorConditionFormula>
        <errorMessage>Length of Production Day - Machine Hrs must be between 0 and 24</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Description</fullName>
        <active>true</active>
        <description>Description is required .</description>
        <errorConditionFormula>ISBLANK(rstk__rtwctr_descr__c)</errorConditionFormula>
        <errorMessage>Description is required .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Division</fullName>
        <active>true</active>
        <description>Division is required and not modifiable.</description>
        <errorConditionFormula>ISBLANK(rstk__rtwctr_div__c) || ( NOT( ISNEW() ) &amp;&amp;  ISCHANGED(rstk__rtwctr_div__c)  )</errorConditionFormula>
        <errorMessage>Division is required and not modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__HrsDay_Labor_Range</fullName>
        <active>false</active>
        <description>Hrs/Day, Labor Range</description>
        <errorConditionFormula>rstk__rtwctr_hrsperdaylab__c &lt;= 0</errorConditionFormula>
        <errorMessage>Hrs/Day, Labor must be greater than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__HrsDay_Machine_Range</fullName>
        <active>false</active>
        <description>Hrs/Day, Machine Range</description>
        <errorConditionFormula>rstk__rtwctr_hrsperdaymach__c  &lt; 0 || rstk__rtwctr_hrsperdaymach__c  &gt; 24</errorConditionFormula>
        <errorMessage>Hrs/Day, Machine must be between 0 and 24</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Issue_Location_ID</fullName>
        <active>true</active>
        <description>Issue Location ID should belong to Work Center Division.</description>
        <errorConditionFormula>NOT( ISBLANK(rstk__rtwctr_isslocid__c) ) &amp;&amp; (rstk__rtwctr_isslocid__r.rstk__sylocid_div__c != rstk__rtwctr_div__c || !rstk__rtwctr_isslocid__r.rstk__sylocid_backflushlocind__c)</errorConditionFormula>
        <errorMessage>Issue Location ID should belong to Work Center Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Mfg_Department</fullName>
        <active>true</active>
        <description>Mfg Department is required and should belong to Work Center Division.</description>
        <errorConditionFormula>ISBLANK(rstk__rtwctr_dept__c) || rstk__rtwctr_dept__r.rstk__rtdept_div__c != rstk__rtwctr_div__c</errorConditionFormula>
        <errorMessage>Mfg Department is required and should belong to Work Center Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Production_Day_Labor_Range</fullName>
        <active>true</active>
        <description>Capacity/Day, Labor Range</description>
        <errorConditionFormula>rstk__rtwctr_labhrsdaysconv__c &lt; 0 || rstk__rtwctr_labhrsdaysconv__c &gt; rstk__rtwctr_hrsperdaylab__c</errorConditionFormula>
        <errorMessage>Length of Production Day - Labor Hrs must be between 0 and Total Capacity Hrs/Day, Labor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Production_Day_Machine_Range</fullName>
        <active>true</active>
        <description>Capacity/Day, Machine Range</description>
        <errorConditionFormula>rstk__rtwctr_machhrsdaysconv__c &lt; 0 || rstk__rtwctr_machhrsdaysconv__c &gt;  rstk__rtwctr_hrsperdaymach__c</errorConditionFormula>
        <errorMessage>Length of Production Day - Machine Hrs must be between 0 and Total Capacity Hrs/Day, Machine</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Queue_Days_Range</fullName>
        <active>true</active>
        <description>Queue Days must be between 0 and 30</description>
        <errorConditionFormula>rstk__rtwctr_queuedays__c &lt; 0 || rstk__rtwctr_queuedays__c &gt; 30</errorConditionFormula>
        <errorMessage>Queue Days must be between 0 and 30</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Responsible_Planner</fullName>
        <active>true</active>
        <description>Valid Responsible Planner is required .</description>
        <errorConditionFormula>ISBLANK(rstk__rtwctr_resp__c) || rstk__rtwctr_resp__r.rstk__syusr_obsolete__c</errorConditionFormula>
        <errorMessage>Valid Responsible Planner is required .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Scheduling_Factor_Range</fullName>
        <active>true</active>
        <description>Scheduling Factor Range</description>
        <errorConditionFormula>rstk__rtwctr_schedfactor__c &lt; 0  || rstk__rtwctr_schedfactor__c  &gt; 10</errorConditionFormula>
        <errorMessage>Scheduling Factor must be between 0 and 10</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Total_Capacity_HrsDay_Labor_Range</fullName>
        <active>true</active>
        <description>Total Capacity Hrs/Day, Labor Range</description>
        <errorConditionFormula>rstk__rtwctr_hrsperdaylab__c &lt; 0</errorConditionFormula>
        <errorMessage>Total Capacity Hrs/Day, Labor cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Total_Capacity_HrsDay_Machine_Range</fullName>
        <active>true</active>
        <description>Total Capacity Hrs/Day, Machine Range</description>
        <errorConditionFormula>rstk__rtwctr_hrsperdaymach__c  &lt; 0</errorConditionFormula>
        <errorMessage>Total Capacity Hrs/Day, Machine cannot be less than 0</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Work_Center_Number</fullName>
        <active>true</active>
        <description>Work Center Number is required and not modifiable.</description>
        <errorConditionFormula>ISBLANK(rstk__rtwctr_wctr__c)  || ( NOT(ISNEW())  &amp;&amp;  ISCHANGED(rstk__rtwctr_wctr__c) )</errorConditionFormula>
        <errorMessage>Work Center Number is required and not modifiable.</errorMessage>
    </validationRules>
</CustomObject>